--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style = "background-image: url('https://wallpapercave.com/wp/wp7592501.jpg');">
+  <body style = "background-image: url('https://i.pinimg.com/736x/a9/a3/e1/a9a3e138385beb21fb7ff6637cfb5a27.jpg');">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
